# euterpe-tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile  pyproject.toml
.cargo/: config.toml
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  ccstatusline-settings.json  devcontainer.json  init-host.sh  post-create.sh  post-start.sh  statusline-shim.sh
.github/workflows/: ci.yml
cmd/etp-cas/: Cargo.toml
cmd/etp-cas/src/: main.rs
cmd/etp-cas/tests/cmd/: cas-version.toml
cmd/etp-csv/: Cargo.toml  build.rs
cmd/etp-csv/src/: main.rs
cmd/etp-find/: Cargo.toml
cmd/etp-find/src/: main.rs
cmd/etp-init/: Cargo.toml
cmd/etp-meta/: Cargo.toml
cmd/etp-meta/src/: main.rs
cmd/etp-meta/tests/cmd/: meta-cue-help.toml
cmd/etp-query/: Cargo.toml
cmd/etp-query/src/: main.rs
cmd/etp-query/tests/: cli_tests.rs
cmd/etp-scan/: Cargo.toml  build.rs
cmd/etp-scan/src/: main.rs
cmd/etp-tree/: Cargo.toml
cmd/etp-tree/src/: main.rs
cmd/etp-tree/tests/cmd/: tree-case-sort.toml  tree-collation.stdout  tree-no-default-db-fallback.stderr  tree-no-scan-exits-2.toml
cmd/etp/etp_commands/: anime.py  catalog.py  dispatcher.py  movies.py  television.py  video_cli.py
collections/: anime-collections.yaml  reconciliation-plan.yaml
conf/: anime.env  catalog.kdl  media-ingestion.kdl  media.env
crates/etp-cue/: Cargo.toml
crates/etp-cue/src/: display.rs
crates/etp-lib/: Cargo.toml  schema.sql
crates/etp-lib/migrations/: 003_covering_index_files.sql  005_directories_fk_restrict.sql
crates/etp-lib/src/: cas.rs  config.rs  csv_writer.rs  finder.rs  lib.rs  metadata.rs  ops.rs  profiling.rs  scanner.rs  tree.rs
crates/etp-lib/src/db/: dao.rs  (+1 more)
crates/etp-lib/tests/: db_output_parity.rs  find_sql_pushdown.rs  move_tracking.rs  open_and_resolve_scan.rs  stats_output_formats.rs
docs/: DESIGN_NOTES.md  album-display-mockup.txt  etp-anime-parsing-rules.md  etp.md  shoko-runbook.md
docs/adrs/: 2026-02-15-02-icu4x-collation.md  2026-02-22-09-rust-plumbing-python-porcelain.md  2026-02-22-10-explicit-deletion-no-cascade.md  2026-02-22-11-capture-all-filter-on-output.md  2026-02-22-11-sqlx-managed-migrations.md  2026-02-23-01-kdl-1-for-python-porcelain.md  2026-03-24-01-anidb-api-local-caching.md  2026-03-24-01-scan-time-exclude-filtering.md  2026-03-24-02-btrfs-cow-reflinks.md  2026-03-24-03-xdg-catalog-config-resolution.md  2026-03-25-01-self-instrumented-profiling.md  2026-03-26-01-anime-subcommand-split.md  2026-03-26-02-installable-python-package.md  2026-03-27-01-python-dependencies-welcome.md  2026-03-27-02-clean-schema-alongside-migrations.md  2026-03-27-03-upsert-file-sync.md  2026-03-28-01-mediainfo-over-taglib.md  2026-03-28-04-default-database-fallback.md  2026-04-02-01-keep-both-conflict-resolution.md  2026-04-02-02-video-metadata-support.md  2026-04-02-03-romaji-title-matching.md  2026-04-02-04-hamatv-special-episode-ranges.md  2026-04-19-01-regexp-pushdown-for-find.md  2026-04-19-02-anime-triage-manifest-format.md  2026-05-30-01-shoko-anidb-matching-authority.md  2026-06-09-01-plan-apply-ingest-cli.md  2026-06-09-02-plex-provider-id-directory-tags.md  2026-06-09-03-shared-ingest-register.md  2026-06-09-04-tmdb-tvdb-dual-provider.md  2026-06-10-01-downloads-domain-partitioning.md
docs/plans/: 2026-02-22-euterpe-tools.md  2026-02-22-sp1.3-db-backed-output.md  2026-02-22-sp1.4-state-cleanup.md  2026-02-23-sp1.5-etp-find-python-porcelain.md  2026-03-24-etp-anime-triage-mode.md  2026-03-27-sp2.1-metadata-reading.md  2026-03-28-scan-display-separation.md  2026-03-30-sonarr-inspired-anime-parsing.md  2026-05-30-shoko-migration.md  2026-06-09-movies-television-ingest.md
etp/: etp  etp-anime  etp-catalog  paths.py  pyproject.toml  test_anime.py  test_catalog.py  test_paths.py
etp-csv/: Cargo.toml
etp-csv/src/: main.rs
etp-csv/tests/cmd/: csv-not-a-dir.toml  csv-quiet.toml  csv-verbose.stderr  csv-version.toml
etp-cue/: Cargo.toml
etp-cue/src/: discid.rs  display.rs  lib.rs  parse.rs  types.rs
etp-find/: Cargo.toml
etp-find/src/: main.rs
etp-find/tests/cmd/: find-no-match.toml  find-not-a-dir.toml  find-size.toml
etp-lib/: Cargo.toml
etp-lib/migrations/: 001_initial.sql  002_add_directory_size.sql  004_metadata_tables.sql  005_directories_fk_restrict.sql
etp-lib/src/: cas.rs  config.rs  csv_writer.rs  lib.rs  metadata.rs  ops.rs  paths.rs  scanner.rs  state.rs  tree.rs
etp-lib/src/db/: dao.rs  mod.rs
etp-lib/tests/: db_output_parity.rs
etp-meta/: Cargo.toml  build.rs
etp-meta/src/: main.rs
etp-meta/tests/cmd/: meta-version.toml
etp-query/: Cargo.toml  build.rs
etp-query/src/: main.rs
etp-query/tests/cmd/: query-version.toml
etp-tree/: Cargo.toml
etp-tree/src/: main.rs
etp-tree/tests/cmd/: tree-basic.stdout  tree-case-sort.stdout  tree-case-sort.toml
etp/src/etp_commands/: __init__.py  anime.py
etp/src/etp_lib/: __init__.py  anidb.py  conflicts.py  manifest.py  media_parser.py  mediainfo.py  paths.py  tvdb.py  types.py
etp/tests/: test_anime.py  test_catalog.py  test_manifest.py  test_media_parser.py  test_media_parser_fuzz.py  test_mediainfo.py  test_paths.py  test_tvdb.py
pylib/etp_lib/: anidb.py  arr.py  colorize.py  conflicts.py  download_cache.py  envfile.py  ingest_register.py  manifest.py  media_config.py  media_parser.py  media_parser_parsy.py  media_scanner.py  media_vocab.py  mediainfo.py  mediainfo_cache.py  naming.py  paths.py  provider_cache.py  tmdb.py  tvdb.py  types.py  video_ingest.py
pylib/tests/: conftest.py  test_anidb.py  test_anime.py  test_colorize.py  test_conflicts.py  test_download_cache.py  test_envfile.py  test_ingest_register.py  test_manifest.py  test_media_config.py  test_media_parser.py  test_media_parser_fuzz.py  test_media_parser_parsy.py  test_media_scanner.py  test_mediainfo.py  test_mediainfo_cache.py  test_naming.py  test_parsy_parity.py  test_paths.py  test_tmdb.py  test_tvdb.py  test_video_cli.py  test_video_ingest.py  test_wheel.py
pylib/tools/: gen_corpus_fixture.py  qa_parser.py
scripts/: plex_collections_export.py  pyproject.toml  shoko.py
(+8 files in other folders)
