[package]
name = "etp-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
glob = "0.3"
walkdir = "2"
icu_collator = "2.1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["rt", "macros"] }
etcetera = "0.11"
knuffel = "3.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
