[package]
name = "etp-lib"
version = "0.2.0"
edition = "2024"

[features]
profiling = ["tracing", "tracing-chrome", "tracing-subscriber"]

[dependencies]
tracing = { version = "0.1", optional = true }
tracing-chrome = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
blake3 = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
futures-core = "0.3"
glob = "0.3"
icu_collator = "2.1.1"
knuffel = "3.2"
lofty = "0.23"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["rt", "macros"] }
etcetera = "0.11"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
