[project]
name = "etp"
version = "0.1.0"
description = "Python plumbing for euterpe-tools"
requires-python = ">=3.14"
dependencies = ["kdl-py>=1.2.0"]

[project.scripts]
etp = "etp_commands.dispatcher:main"
etp-anime = "etp_commands.anime:main"
etp-catalog = "etp_commands.catalog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etp_lib", "src/etp_commands"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8",
    "pyright>=1.1",
    "ty>=0.0.25",
    "hypothesis>=6.151.9",
]

[tool.ruff]
src = ["src", "tests"]

[tool.pyright]
pythonPlatform = "All"
exclude = [".venv/"]
reportPrivateImportUsage = "warning"

[tool.ty.src]

[tool.pytest.ini_options]
testpaths = ["tests"]
