[package]
name = "etp-query"
version = "0.2.0"
edition = "2024"

[features]
profiling = ["etp-lib/profiling"]

[dependencies]
etp-lib = { path = "../../crates/etp-lib" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
trycmd = "1.0"
